; ModuleID = '/home/carl/AnghaBench/nanomsg/src/utils/extr_sem.c_nn_sem_post.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/utils/extr_sem.c_nn_sem_post.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_sem = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_sem_post(%struct.nn_sem* %0) #0 {
  %2 = alloca %struct.nn_sem*, align 8
  %3 = alloca i32, align 4
  store %struct.nn_sem* %0, %struct.nn_sem** %2, align 8
  %4 = load %struct.nn_sem*, %struct.nn_sem** %2, align 8
  %5 = getelementptr inbounds %struct.nn_sem, %struct.nn_sem* %4, i32 0, i32 1
  %6 = call i32 @pthread_mutex_lock(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp eq i32 %7, 0
  %9 = zext i1 %8 to i32
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @errnum_assert(i32 %9, i32 %10)
  %12 = load %struct.nn_sem*, %struct.nn_sem** %2, align 8
  %13 = getelementptr inbounds %struct.nn_sem, %struct.nn_sem* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp eq i32 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @nn_assert(i32 %16)
  %18 = load %struct.nn_sem*, %struct.nn_sem** %2, align 8
  %19 = getelementptr inbounds %struct.nn_sem, %struct.nn_sem* %18, i32 0, i32 0
  store i32 1, i32* %19, align 4
  %20 = load %struct.nn_sem*, %struct.nn_sem** %2, align 8
  %21 = getelementptr inbounds %struct.nn_sem, %struct.nn_sem* %20, i32 0, i32 2
  %22 = call i32 @pthread_cond_signal(i32* %21)
  store i32 %22, i32* %3, align 4
  %23 = load i32, i32* %3, align 4
  %24 = icmp eq i32 %23, 0
  %25 = zext i1 %24 to i32
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @errnum_assert(i32 %25, i32 %26)
  %28 = load %struct.nn_sem*, %struct.nn_sem** %2, align 8
  %29 = getelementptr inbounds %struct.nn_sem, %struct.nn_sem* %28, i32 0, i32 1
  %30 = call i32 @pthread_mutex_unlock(i32* %29)
  store i32 %30, i32* %3, align 4
  %31 = load i32, i32* %3, align 4
  %32 = icmp eq i32 %31, 0
  %33 = zext i1 %32 to i32
  %34 = load i32, i32* %3, align 4
  %35 = call i32 @errnum_assert(i32 %33, i32 %34)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @errnum_assert(i32, i32) #1

declare dso_local i32 @nn_assert(i32) #1

declare dso_local i32 @pthread_cond_signal(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
